<resources>
    <string name="app_name">Wagba</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="confirm_password">confirm password</string>
    <string name="phone">Phone</string>
    <string name="clear">clear</string>
    <string name="name_placeholder">restaurant placeholder</string>
    <string name="description_placeholder">placeholder, placeholder</string>
    <string name="profile">profile</string>
    <string name="orders">orders</string>
    <string name="home">Home</string>
    <string name="restaurants">restaurants</string>
    <string name="cart">cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_quantity_placeholder">1 delivered</string>
    <string name="date_placeholder">date placeholder</string>
    <string name="price_placeholder">0 EGP</string>
    <string name="add">+</string>
    <string name="available">available</string>
    <string name="your_order_from">Your order from</string>
    <string name="add_items">add items</string>
    <string name="remove">Remove</string>
    <string name="regular">Regular</string>
    <string name="payment_details">Payment details</string>
    <string name="subtotal">Subtotal</string>
    <string name="Tax">Tax</string>
    <string name="delivery_fees">Delivery fees</string>
    <string name="total">Total</string>
    <string name="search_restaurant_or_dish">Search restaurant or dish</string>
    <string name="_1x">1X</string>
    <string name="mines">-</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="order">Order</string>
    <string name="deliver_to">Deliver to</string>
    <string name="gate_2">Gate 2</string>
    <string name="gate_3">Gate 3</string>
    <string name="male">male</string>
    <string name="sign_out">sign out</string>
    <string name="female">female</string>
    <string name="gender">Gender</string>
</resources>