<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toStartOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/separator"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/name_placeholder"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintEnd_toStartOf="@id/iv_meal"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintTop_toTopOf="@id/btn_add"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        app:layout_constraintBottom_toTopOf="@id/tv_price"
        app:layout_constraintStart_toStartOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:text="@string/description_placeholder"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/iv_meal"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_outline_restaurant_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_price"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_placeholder"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintEnd_toStartOf="@id/tv_available"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintBottom_toTopOf="@id/separator"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:id="@+id/tv_available"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_price"
        app:layout_constraintBottom_toBottomOf="@id/tv_price"
        app:layout_constraintEnd_toEndOf="@id/tv_description"
        app:layout_constraintStart_toEndOf="@id/tv_price"
        android:text="@string/available"
        android:textSize="20sp"
        />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>