<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:textColorHint="#78909C"

            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="emailAddress"


            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"

            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/cb_rememberMe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:autofillHints="password"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"


            android:layout_marginStart="20dp"

            android:layout_marginEnd="20dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@id/btn_register"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_register"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="60dp"

            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_rememberMe"
            app:layout_constraintStart_toEndOf="@id/btn_login"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            android:layout_marginEnd="20dp"
            />
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/remember_me"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            android:textSize="20sp"
            android:id="@+id/cb_rememberMe"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>