<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"

        android:src="@drawable/ic_outline_restaurant_24"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_name"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"

        app:layout_constraintVertical_chainStyle="packed"

        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_placeholder"

        app:layout_constraintTop_toTopOf="@id/iv_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_quantity"

        app:layout_constraintStart_toEndOf="@id/iv_logo"
        app:layout_constraintEnd_toStartOf="@id/tv_price"

        android:layout_marginEnd="5dp"

        app:layout_constraintVertical_chainStyle="packed"
        style="@style/PrimaryText"
        />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintBottom_toTopOf="@id/tv_date"
        android:text="@string/order_quantity_placeholder"
        style="@style/SecondaryText"
        />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_placeholder"

        app:layout_constraintTop_toBottomOf="@id/tv_quantity"
        app:layout_constraintBottom_toBottomOf="@id/iv_logo"

        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        style="@style/SecondaryText"
        />

    <TextView

        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginEnd="20dp"
        android:text="@string/price_placeholder"

        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name"

        app:layout_constraintTop_toTopOf="@id/tv_name"

        app:layout_constraintVertical_bias="0.0"
        style="@style/price"
        />


</androidx.constraintlayout.widget.ConstraintLayout>